# NvCtrl-linux

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  NvCtrl-Linux.desktop  PKGBUILD  README.md  build.sh  generate_appimage.sh  install.sh
gwepp/: gwepp.json
include/: GPU_dynamic_info_loader.hpp  GPU_static_info_loader.hpp  NVML.hpp  about_dialog.hpp  app_config.hpp  app_version.hpp  clock_profile_dialog.hpp  dbus_receiver.hpp  dbus_sender.hpp  edit_clock_offset_profile_dialog.hpp  edit_fan_profile_dialog.hpp  fan_profile_dialog.hpp  gpu_clock_controller.hpp  gpu_fan_controller.hpp  gpu_power_controller.hpp  gpu_processes_controller.hpp  gpu_processes_overview_dialog.hpp  gpu_utilizations_controller.hpp  mainwindow.hpp  measure_time.hpp  newfanprofiledialog.hpp  recent_updates_dialog.hpp  report_a_bug_dialog.hpp  settings_dialog.hpp  settings_manager.hpp  settingswindow.hpp  single_instance_app_guard.hpp  steps_fan_profile_dialog.hpp  update_checker.hpp
qrc/: icons.qrc
scripts/: generate_appimage.sh
src/: GPU_dynamic_info_loader.cpp  GPU_static_info_loader.cpp  NVML.cpp  about_dialog.cpp  clock_profile_dialog.cpp  dbus_receiver.cpp  dbus_sender.cpp  edit_clock_offset_profile_dialog.cpp  edit_fan_profile_dialog.cpp  fan_profile_dialog.cpp  gpu_clock_controller.cpp  gpu_fan_controller.cpp  gpu_power_controller.cpp  gpu_processes_controller.cpp  gpu_processes_overview_dialog.cpp  gpu_utilizations_controller.cpp  main.cpp  mainwindow.cpp  measure_time.cpp  newfanprofiledialog.cpp  recent_updates_dialog.cpp  report_a_bug_dialog.cpp  settings_dialog.cpp  settings_manager.cpp  settingswindow.cpp  single_instance_app_guard.cpp  steps_fan_profile_dialog.cpp  update_checker.cpp
ui/: about_dialog.ui  clock_profile_dialog.ui  edit_clock_offset_profile_dialog.ui  edit_fan_profile_dialog.ui  fan_profile_dialog.ui  gpu_processes_overview_dialog.ui  mainwindow.ui  newfanprofiledialog.ui  recent_updates_dialog.ui  report_a_bug_dialog.ui  settings_dialog.ui  settingswindow.ui  steps_fan_profile_dialog.ui
